add verbosity to README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Installation:
-
-    git clone git://github.com/symbiotez/dotvim.git ~/.vim
+Initial Installation:
+    cd ~/.vim/bundle (c:\user\<yourUserName>\vimfiles\bundle  --for windows) 
+    git submodule add git://github.com/symbiotez/dotvim.git 
 
 Create symlinks:
     *nix:
@@ -14,6 +14,6 @@ Create symlinks:
 
 Switch to the `~/.vim` directory, and fetch submodules:
 
-    cd ~/.vim
+    cd ~/.vim      (c:\user\<yourUserName>\vimfiles  --for windows) 
     git submodule init
     git submodule update
